Fixed button spacing on portfolio pages

--- a/app/_assets/sass/pages/portfolio/partials/_content.scss
+++ b/app/_assets/sass/pages/portfolio/partials/_content.scss
@@ -120,12 +120,12 @@
         /* Styles for the button */
         .btn {
           background-color: $blue;
-          margin-top: 1.2em;
+          margin-top: 1em;
           width: auto;
 
           /* Increase top margin on large devices */
           @include breakpoint($mq_large) {
-            margin-top: 2.4em;
+            margin-top: 2em;
           }
 
           /* No top margin for any buttons after the first one */
